--- a/01-WelcomeBack/index.html
+++ b/01-WelcomeBack/index.html
@@ -6,6 +6,7 @@
     <title>Welcome Back</title>
 </head>
 <body>
+    <button id="tomb">tombol</button>
     <script src="script.js"></script>
 </body>
 </html>
