--- a/07-arrow-function/index.html
+++ b/07-arrow-function/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome Back</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="tomb">tombol</button>
-    <p id="text"></p>
+    <div class="box"></div>
     <script src="script.js"></script>
 </body>
 </html>
