--- a/29-error-handling/index.html
+++ b/29-error-handling/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="row mt-5">
             <div class="col">
-                <h1>Movie List</h1>
+                <h1>Movie List.</h1>
             </div>
         </div>
 
